syntax = "proto3";

package io.typestream.testing.proto;

option java_package = "io.typestream.testing.proto";
option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

message PageView {
  string book_id = 1;
  string ip_address = 2;
  google.protobuf.Timestamp viewed_at = 3;
}
